# pyroxa

./: .gitignore  DOCUMENTATION.md  INSTALLATION_GUIDE.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  release.yml  test-install.yml
pyroxa/: __init__.py  io.py  new_functions.py  purepy.py  reaction_chains.py
tests/: __init__.py  quick_test.py  run_all_tests.py
